--- a/css/style.css
+++ b/css/style.css
@@ -49,27 +49,24 @@ body {
 header {
     background-color: black;
     color: white;
-    height: 60px;
-    width:auto;
+    height: 40px;
+    width: auto;
+	font-size: 20px;
 }
 
 .header_horizontal_list ul > li {
-    display: inline-block;
     margin-right: 10px;
     margin-left: 10px;
-	margin-top: 9px;
     float: right;
-    font-size: 22px;
     padding: 11px;
 }
 
 .header_title {
-    display: inline-block;
+
     float: left;
     padding: 1px;
 	margin-left: 100px;
-	margin-top: 20px;
-	font-size: 22px
+	margin-top: 10px;
 	font-weight: bold;
 }
 
@@ -110,10 +107,13 @@ header {
 	background: linear-gradient(to bottom, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(250,250,250,1) 0%, rgba(209,208,214,1) 100%);
 }
 
+section {
+	500px;
+}
 .section_icon {
 	position: absolute;
 	width: auto;
-	height: 450px;
+	height: 400px;
 	bottom: 30px;
 	left: 100px;
 }
@@ -123,7 +123,7 @@ h1 {
 	font-weight: bold;
 	position: absolute;
 	right: 250px;
-	top: 120px;
+	top: 130px;
 }
 
 .info_box {
@@ -153,7 +153,7 @@ h1 {
 	color: #24BA9F;
 	position: absolute;
 	left: 100px;
-	top: 160px;
+	top: 200px;
 }
 
 .right_symbol {
@@ -161,7 +161,7 @@ h1 {
 	color: #24BA9F;
 	position: absolute;
 	right: 100px;
-	top: 160px;
+	top: 200px;
 }
 
 .text_box {
@@ -195,7 +195,7 @@ h1 {
 container {
 	display: flex;
 	align-items: center;
-	height: 350px;
+	height: 360px;
 }
 
 .photo_begin_box {
@@ -573,8 +573,8 @@ footer {
 .footer_main_logo {
 	color: gray;
 	float: right;
-	font-size: 20px;
-	padding: 10px;
+	font-size: 18px;
+	padding: 12px;
 	position: relative;
 }
 
