--- a/css/style3.css
+++ b/css/style3.css
@@ -42,13 +42,68 @@ table {
 	border-spacing: 0;
 }
 
+body {
+	font-family: 'Raleway', sans-serif;
+	height: 2300px;
+}
+
+header {
+    background-color: black;
+    color: white;
+    height: 40px;
+    width: auto;
+	font-size: 20px;
+}
+
+.header_horizontal_list ul > li {
+    margin-right: 10px;
+    margin-left: 10px;
+    float: right;
+    padding: 11px;
+}
+
+.header_title {
+
+    float: left;
+    padding: 1px;
+	margin-left: 100px;
+	margin-top: 10px;
+	font-weight: bold;
+}
+
+.piece_of_list:hover .vertical_box {
+    display: block;
+}
+
+.piece_of_list {
+    position: relative;
+}
+.vertical_box ul li {
+    float: none;
+    padding: 1px;
+}
+
+.vertical_box {
+    background-color: black;
+    height: 110px;
+    width: 140px;
+    display: none;
+    position: absolute;
+	margin-top: 40px;
+	left: -10px;
+}
+
+.color {
+	color: #24BA9F;
+}
+
 cardboard {
     font-family: 'Raleway', sans-serif;
 }
 
 .cardboard_header {
     font-size: 35px;
-    margin: 90px 0 0 50px;
+    margin: 50px 0 0 70px;
 }
 
 .cardboard_talk {
@@ -58,7 +113,7 @@ cardboard {
 .talk_question {
     font-size: 35px;
     color: lightgray;
-    margin: 55px 50px  0 50px;
+    margin: 55px 50px  0 70px;
     display: inline-block;
 }
 
@@ -116,4 +171,31 @@ cardboard {
     color: gray;
     display: inline-block;
     margin: 300px 0 0 20px;
+}
+
+.footer_infos {
+	margin-top: 700px;
+}
+
+.footer_rights {
+	color: gray;
+	float: left;
+	margin-left: 70px;
+}
+
+.footer_main_logo {
+	color: gray;
+	float: right;
+	font-size: 18px;
+	padding: 12px;
+	margin-right: 80px;
+}
+
+.footer_logos {
+	float: right;
+	margin-right: 25px;
+}
+
+.logo_bold {
+	font-weight: bold;
 }
