praca warsztatowa wersja ktoras tam

--- a/css/style.css
+++ b/css/style.css
@@ -42,63 +42,74 @@ table {
 	border-spacing: 0;
 }
 
+/*
+
+BODY
+
+*/
+
 body {
 	font-family: 'Raleway', sans-serif;
+	width: 100%;
 }
+.color {
+	color: #24BA9F;
+}
+
+/*
+
+HEADER
+
+*/
 
 header {
     background-color: black;
     color: white;
     height: 40px;
-    width: auto;
 	font-size: 20px;
 }
-
-.header_horizontal_list ul > li {
-    margin-right: 10px;
-    margin-left: 10px;
-    float: right;
-    padding: 11px;
-}
-
 .header_title {
-
     float: left;
-    padding: 1px;
+	font-weight: bold;
 	margin-left: 100px;
 	margin-top: 10px;
-	font-weight: bold;
+	padding: 1px;
+	margin: 11px 1px 1px 101px;
 }
-
-.piece_of_list:hover .vertical_box {
-    display: block;
+.header_horizontal_list ul > li {
+	float: right;
+    margin:11px 20px 0 20px;
 }
-
 .piece_of_list {
-    position: relative;
+	position: relative;
 }
-.vertical_box ul li {
-    float: none;
+.hidden_list {
+	display: none;
+}
+.vertical_list {
+	position: absolute;
+	background-color: black;
+    height: 110px;
+    width: 140px;
+	top: 40px;
+	left: -10px;
+}
+.vertical_list ul li {
+	float: none;
     padding: 1px;
 }
 
-.vertical_box {
-    background-color: black;
-    height: 110px;
-    width: 140px;
-    display: none;
-    position: absolute;
-	margin-top: 40px;
-	left: -10px;
-}
+/*
 
-.color {
-	color: #24BA9F;
-}
+SECTION1
 
-#slide_box {
+*/
+
+.box {
+	height: 500px;
+}
+.slide_box {
 	position: relative;
-	width: auto;
 	height: 500px;
 	rgba(246,41,12,1)), color-stop(0%, rgba(240,47,23,1)), color-stop(0%, rgba(250,250,250,1)), color-stop(100%, rgba(209,208,214,1)));
 	background: -webkit-linear-gradient(top, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(250,250,250,1) 0%, rgba(209,208,214,1) 100%);
@@ -106,483 +117,671 @@ header {
 	background: -ms-linear-gradient(top, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(250,250,250,1) 0%, rgba(209,208,214,1) 100%);
 	background: linear-gradient(to bottom, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(250,250,250,1) 0%, rgba(209,208,214,1) 100%);
 }
-
-section {
-	500px;
-}
-.section_icon {
+.icon_box {
 	position: absolute;
 	width: auto;
 	height: 400px;
 	bottom: 30px;
 	left: 100px;
 }
-
-h1 {
-	font-size: 50px;
+h2 {
 	font-weight: bold;
 	position: absolute;
 	right: 250px;
 	top: 130px;
+	font-size: 50px;
 }
-
 .info_box {
-	width: 400px;
-	height: 80px;
 	text-align: center;
 	position: absolute;
+	width: 400px;
+	height: 80px;
 	right: 280px;
 	top: 210px;
 }
-
 .more_box {
-	font-size: 25px;
-	padding: 15px;
-	background-color: #24BA9F;
-	border-radius: 15px;
-	width: 250px;
 	text-align: center;
-	color: white;
 	position: absolute;
+	color: white;
+	background-color: #24BA9F;
+	width: 250px;
 	right: 340px;
 	top: 300px;
+	font-size: 25px;
+	padding: 15px;
+	border-radius: 15px;
 }
-
-.left_symbol {
-	font-size: 100px;
-	color: #24BA9F;
+.left_slyder_button {
 	position: absolute;
+	color: #24BA9F;
 	left: 100px;
 	top: 200px;
-}
-
-.right_symbol {
 	font-size: 100px;
-	color: #24BA9F;
+}
+.right_slyder_button {
 	position: absolute;
+	color: #24BA9F;
 	right: 100px;
 	top: 200px;
+	font-size: 100px;
 }
 
-.text_box {
-	width: 395px;
-	height: 300px;
-	border: 1px solid lightgray;
-	margin: 10px 30px 30px 15px;
-	position: relative;
-}
+/*
 
-.text_box p {
-	display: block;
-	position: absolute;
-	top: 60px;
-	left: 15px;
-	padding-right: 15px;
-}
+SECTION2
 
-.container_header::after {
-	content:"";
-	background-color: #24BA9F;
-	width: 110px;
-	height: 6px;
-	display: block;
-}
+*/
 
-.container_header {
-	display: block;
-}
-
-container {
+.container {
 	display: flex;
 	align-items: center;
 	height: 360px;
 }
-
-.photo_begin_box {
-	margin: 15px 15px 70px 70px;
+.photo_begin_container {
+	position: relative;
 	width: 395px;
 	border: 1px solid lightgray;
-	position: relative;
+	margin: 15px 15px 70px 70px;
 	z-index: 1;
 }
-
-.photo_end_box {
+.opacity_container {
+	position: absolute;
+	background-color: rgba(255, 255, 255, .4);
+	width: 397px;
+	height: 50px;
+	top: 760px;
+	z-index: 2;
+}
+.position_opacity {
+	left: 70px;
+}
+.hidden_opacity {
+	display: none;
+}
+.opacity_text {
+	font-weight: bold;
+	color: black;
+	font-size: 20px;
+}
+.photo_end_container {
 	margin: 15px 15px 70px 15px;
 	width: 395px;
 	border: 1px solid lightgray;
 	position: relative;
 	z-index: 1;
 }
-
-.container_header {
+.building_opacity {
+	left: 497px;
+}
+.opacity_text::after {
+	content:"";
+	display: block;
+	background-color: #24BA9F;
+	height: 6px;
+	width: 170px;
+}
+.text_container {
+	position: relative;
+	width: 395px;
+	height: 300px;
+	border: 1px solid lightgray;
+	margin: 10px 30px 30px 15px;
+}
+.text_container p {
+	display: block;
 	position: absolute;
+	top: 60px;
+	left: 15px;
+	padding-right: 15px;
+}
+.header_container {
+	position: absolute;
+	display: block;
 	font-weight: bold;
 	top: 20px;
 	left: 15px;
 }
-
-.opacity_box {
-	position: absolute;
-	background-color: rgba(255, 255, 255, .4);
-	z-index: 2;
-	width: 397px;
-	height: 50px;
-	top: 760px;
-}
-
-#position_opacity {
-	left: 70px;
-}
-
-#building_opacity {
-	left: 497px;
-}
-
-.opacity_text {
-	color: black;
-	font-weight: bold;
-	font-size: 20px;
-}
-
-.opacity_text::after {
+.header_container::after {
 	content:"";
-	background-color: #24BA9F;
-	height: 6px;
-	width: 170px;
 	display: block;
+	background-color: #24BA9F;
+	width: 110px;
+	height: 6px;
 }
 
-chest {
-	width: 100%;
+/*
+
+SECTION3
+
+*/
+
+.chest {
 	position: relative;
 	background-color: #F1F1F1;
+	width: 100%;
 }
-
-.chest_header {
-	font-weight: bold;
+.header_chest {
 	position: absolute;
+	display: block;
+	font-weight: bold;
 	top: 30px;
 	left: 65px;
-	display: block;
 	font-size: 22px;
-	z-index: 2;
 }
-
-.chest_header::after {
+.header_chest::after {
 	content:"";
+	display: block;
 	background-color: #24BA9F;
 	width: 350px;
 	height: 6px;
-	display: block;
 }
-
-.chest_box {
-	    height: 500px;
-	    width: 400px;
-	    position: relative;
-	    text-align: center;
-	    display: inline-block;
-	    margin-left: 10px;
-		margin-bottom: 100px;
-}
-
-#rest_box {
-	background-color: white;
-	left: 50px;
-	top:60px;
-	border: 3px solid lightgray;
-
-}
-
-#add_box {
-	background-color: #24BA9F;
-	left: 60px;
-	top: 60px;
-	border: 3px solid #24BA9F;
-
-}
-
-#option_box {
-	background-color: white;
-	left: 70px;
-	top: 60px;
-	border: 3px solid lightgray;
-
-}
-.chest_boxes {
+.chest_main_bin {
 	display: flex;
-	align-items: center;
+	align-items: flex-end;
 	background-color: #F1F1F1;
-	z-index: 1;
 	height: 700px;
 }
 
-.box_info {
-	position: relative;
-}
+/*
+PIERWSZY DIV Z CENAMI
+*/
 
-.box_icon {
+.chest_bin {
+	position: relative;
+	text-align: center;
+	display: inline-block;
+	height: 500px;
+	width: 400px;
+	margin: 0 0 100px 10px;
+}
+.rest_bin {
+	background-color: white;
+	left: 50px;
+	top: 60px;
+	border: 3px solid lightgray;
+}
+.icon_bin {
+	position: absolute;
 	width: 30px;
     height: 30px;
-    border-radius: 100%;
-    position: absolute;
     left: 175px;
     bottom: 485px;
+	border-radius: 100%;
 }
-
-#box_art {
+.art_bin {
 	background-color: lightgray;
 	border: 12px solid white;
 	box-shadow: 0px 0px 0px 3px lightgray;
 }
-
-#box_symbol {
-	background-color: white;
-	border: 12px solid #24BA9F;
-	box-shadow: 0px 0px 0px 3px #24BA9F;
+.info_bin {
+	position: relative;
 }
-
-#box_logo {
-	background-color: lightgray;
-	border: 12px solid white;
-	box-shadow: 0px 0px 0px 3px lightgray;
-}
-
 .info_plan {
-	font-size: 22px;
 	font-weight: bold;
+	font-size: 22px;
 	padding: 50px;
 }
-
-#plan_many {
+.plan_many {
 	color: #24BA9F;
 }
-#plan_more {
-	color: white;
-}
-
-#plan_the_most {
-	color: #24BA9F;
-}
-
 .info_price {
+	position: absolute;
+	font-weight: bold;
+	background-color: white;
 	width: 170px;
 	height: 170px;
-	border-radius: 100%;
-	background-color: white;
-	border: 1px solid lightgray;
-	position: absolute;
 	left: 115px;
 	top: 90px;
-	font-weight: bold;
+	border-radius: 100%;
+	border: 1px solid lightgray;
 }
-
+.price_light {
+	color: lightgray;
+}
 .price_height {
 	font-size: 60px;
 	margin-top: 40px;
+}
+.price_upper {
+	position: absolute;
+	font-size: 15px;
 }
 .price_time {
 	font-size: 15px;
 	margin-top: 15px;
 }
-
-#price_color {
-	color: #24BA9F;
+.margin_bin {
+	margin-top: 150px;
 }
-
-#price_light {
-	color: lightgray;
-}
-
-.price_upper {
-	font-size: 15px;
-	position: absolute;
-
-}
-
 .info_paint {
 	color: gray;
 	background-color: #E4E4E4;
 	padding: 13px;
 }
-
 .info_express {
 	color: black;
 	background-color: #F1F1F1;
 	padding: 13px;
 }
-
-.info_describe {
-	color: gray;
-	background-color: #F1F1F1;
-	padding: 13px;
+.join_bin {
+	position: absolute;
+	color: white;
+	background-color: #24BA9F;
+	width: 160px;
+	left: 112px;
+	top: 450px;
+	font-size: 20px;
+	padding: 5px;
+	border-radius: 4px;
 }
 
+/*
+DRUGI DIV Z CENAMI
+*/
+
+.add_bin {
+	background-color: #24BA9F;
+	left: 60px;
+	top: 60px;
+	border: 3px solid #24BA9F;
+}
+.symbol_bin {
+	background-color: white;
+	border: 12px solid #24BA9F;
+	box-shadow: 0px 0px 0px 3px #24BA9F;
+}
+.plan_more {
+	color: white;
+}
+.price_color {
+	color: #24BA9F;
+}
 .info_show {
 	color: gray;
 	background-color: white;
 	padding: 13px;
 }
-
-.box_margin {
-	margin-top: 150px;
+.info_describe {
+	color: gray;
+	background-color: #F1F1F1;
+	padding: 13px;
 }
-
-.box_join {
-	font-size: 20px;
-	background-color: #24BA9F;
-	color: white;
-	width: 160px;
-	border-radius: 4px;
-	padding: 5px;
-	margin-left: 112px;
+.observe_bin {
 	position: absolute;
-	bottom: 20px;
-}
-
-.box_observe {
-	font-size: 20px;
 	background-color: white;
 	color: #24BA9F;
 	width: 160px;
 	height: 20px;
+	left: 112px;
+	top: 450px;
 	border-radius: 4px;
 	padding: 5px;
-	margin-left: 112px;
-	position: absolute;
-	bottom: 20px;
+	font-size: 20px;
 }
+
+/*
+TRZECI DIV Z CENAMI
+*/
+
+.option_bin {
+	background-color: white;
+	left: 70px;
+	top: 60px;
+	border: 3px solid lightgray;
+}
+.logo_bin {
+	background-color: lightgray;
+	border: 12px solid white;
+	box-shadow: 0px 0px 0px 3px lightgray;
+}
+.plan_the_most {
+	color: #24BA9F;
+}
+
+/*
+
+SECTION4
+
+*/
+
+.application {
+  	background-color: white;
+  	font-family: Arial, Verdana, sans-serif;
+	width: 100%;
+  	padding: 30px 0;
+  	margin: 0;
+}
+.main_width {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+.inline header {
+	background-color: white;
+}
+.application h3 {
+  color: #575757;
+  font-size: 18px;
+  background-color: white;
+}
+.application header.align_right {
+  text-align: right;
+}
+.inline {
+  display:inline-block;
+  width:300px;
+  padding:14px;
+  vertical-align: top;
+}
+.form {
+  margin-top:50px;
+}
+.drop_down_list {
+  border:1px solid #8de0d2;
+  width: 280px;
+  height:38px;
+  background-color: white;
+  margin-top:22px;
+  padding: 8px 12px;
+  position: relative;
+}
+.list_label {
+  font-size: 30px;
+  color: #e2e2e2;
+  font-family: 'ralewaylight', Arial, Tahoma, sans-serif;
+}
+.checkbox {
+  position: relative;
+  padding: 30px 30px 30px 0;
+}
+.checkbox input {
+  display: block;
+  opacity: 0;
+  height: 48px;
+  position: absolute;
+  width: 48px;
+  cursor: pointer;
+}
+.checkbox label {
+  display: block;
+  padding-left: 65px;
+  position: relative;
+  font-size: 28px;
+  color: #cecece;
+  line-height: 120%;
+  padding-top: 10px;
+  cursor: pointer;
+}
+.checkbox label::before, .checkbox label::after {
+  border: 1px solid #27c7ab;
+  content: "";
+  display: block;
+  left: 0;
+  height: 48px;
+  position: absolute;
+  width: 48px;
+  top: 0;
+}
+.checkbox label::after {
+  background: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20preserveAspectRatio%3D%22xMidYMid%22%20width%3D%2233.875%22%20height%3D%2233%22%20viewBox%3D%220%200%2033.875%2033%22%3E%0A%20%20%3Cpath%20d%3D%22M9.470%2C15.209%20L14.061%2C24.104%20C14.061%2C24.104%2021.522%2C6.026%2033.287%2C-0.000%20C33.000%2C4.304%2031.852%2C8.035%2033.861%2C12.626%20C28.696%2C13.774%2018.078%2C26.687%2014.635%2C33.000%20C9.756%2C26.974%204.017%2C22.382%20-0.000%2C20.948%20L9.470%2C15.209%20Z%22%20fill%3D%22%2327c7ab%22/%3E%0A%3C/svg%3E%0A") no-repeat center;
+  border: 0;
+  display: none;
+}
+.checkbox input:checked + label::after {
+  display: block;
+}
+.active {
+  background: url('../images/form_ok.jpg');
+  width: 48px;
+  height: 40px;
+}
+.inline_text {
+  display: inline-block;
+  width: 228px;
+  vertical-align: top;
+  margin-top: 30px;
+  margin-left: 15px;
+  color: #aeaeae;
+}
+.image_part img {
+  margin-top: 110px;
+  margin-left: 38px;
+}
+.application .green_bell {
+  background-color: #24baa0;
+  width: 280px;
+  height: 6px;
+  display: inline-block;
+  margin: 5px 0 5px 0;
+}
+.summary_panel {
+  background-color: white;
+  width:100%;
+  height:195px;
+  padding:10px;
+  margin-top: 50px;
+}
+.application .green_button {
+  background-color: #27c7ab;
+  color: white;
+  text-align:center;
+  text-transform: uppercase;
+  width: 200px;
+  padding: 10px 30px;
+  font-size: 24px;
+  display: inline-block;
+  font-family: 'ralewaymedium', Arial, Tahoma, sans-serif;
+  margin-top: 20px;
+  margin-left: 29px;
+  border-radius: 8px;
+  text-decoration: none;
+}
+.panel_left {
+  display: inline-block;
+  width: 185px;
+  vertical-align: top;
+  padding-bottom:10px;
+  border-bottom:1px solid #e7e7e7;
+  height: 135px;
+}
+.panel_right {
+  display: inline-block;
+  width: 100px;
+  border-left:1px solid #e7e7e7;
+  text-align: right;
+  vertical-align: top;
+  padding-bottom:10px;
+  border-bottom:1px solid #e7e7e7;
+  height: 135px;
+}
+.panel_left h4, .panel_right h4 {
+  color: #24baa0;
+  font-size: 23px;
+}
+.panel_left span {
+  margin-top:10px;
+  font-size: 22px;
+  color: #5b5a5a;
+  display: block;
+}
+.panel_right span {
+  display: block;
+  font-size: 22px;
+  color: #24baa0;
+  margin-top:10px;
+}
+.sum_label {
+  display: inline-block;
+  width: 185px;
+  margin-top: 10px;
+  font-size: 22px;
+  color: #5b5a5a;
+}
+.sum {
+  display: inline-block;
+  width: 100px;
+  text-align: right;
+  margin-top: 10px;
+  font-size: 22px;
+  color: #24baa0;
+}
+.list_arrow {
+  width: 0;
+  height: 0;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 15px solid #24baa0;
+  display:block;
+  position: absolute;
+  right: 14px;
+  top: 20px;
+  cursor: pointer;
+}
+.list_panel {
+  background-color: white;
+  border: 1px solid #ccc;
+  width: 288px;
+  padding-left: 15px;
+  padding-bottom: 10px;
+  list-style: none;
+  margin: 0;
+  left: 0px;
+  z-index: 2;
+  position: absolute;
+  top: 54px;
+  display:none;
+}
+.visible_panel {
+	display: block;
+}
+.list_panel li {
+  margin-top:10px;
+  cursor: pointer;
+  color: #585858;
+}
+.title {
+  height: 30px;
+}
+
+/*
+
+FOOTER
+
+*/
 
 footer {
 	position: relative;
 }
-
 .footer_header {
-	font-weight: bold;
 	position: absolute;
+	display: block;
+	font-weight: bold;
 	top: 30px;
 	left: 65px;
-	display: block;
 	font-size: 22px;
 }
-
 .footer_header::after {
 	content:"";
+	display: block;
 	background-color: #24BA9F;
 	width: 350px;
 	height: 6px;
-	display: block;
 }
-
-.footer_box {
-	width: 700px;
-	height: 450px;
+.footer_data {
 	display: inline-block;
 	position: absolute;
+	display: flex;
+	flex-direction: column;
+	width: 700px;
+	height: 450px;
 	top: 100px;
 	left: 60px;
 }
-
-.footer_allow {
-	width: 400px;
-	height: 450px;
+.data_size {
+	display: block;
+	color: lightgray;
+	width: 660px;
+	border: 1px solid #24BA9F;
+	font-size: 22px;
+}
+.data_name {
+	padding: 20px;
+	margin-top: 20px;
+}
+.data_email {
+	padding: 20px;
+	margin-top: 30px;
+}
+.data_message {
+	height: 60px;
+	padding: 15px 25px 90px 15px;
+	margin-top: 30px;
+}
+.footer_confirm {
 	display: inline-block;
 	position: absolute;
+	width: 400px;
+	height: 450px;
 	top: 90px;
 	left: 850px;
 }
-
-.footer_infos {
-	width: 1150px;
-	height: 50px;
-	display: block;
-	position: absolute;
-	left: 60px;
-	top: 600px;
-}
-
-.box_size {
-	border: 1px solid #24BA9F;
-	color: lightgray;
-	display: block;
-	position: absolute;
-	width: 660px;
-	font-size: 22px;
-
-}
-
-#box_name {
-	padding: 20px;
-	top: 20px;
-}
-
-#box_email {
-	padding: 20px;
-	top: 110px;
-}
-
-#box_message {
-	padding: 15px 15px 90px 15px;
-	top: 210px;
-	height: 60px;
-}
-
-#box_sit {
+.confirm_sit {
 	margin-left: 60px;
-	position: relative;
 }
-
-#allow_icon {
-	border: 1px solid #24BA9F;
-	border-radius: 2px;
-	height: 50px;
-	width: 50px;
-	margin-left: 30px;
-	margin-top: 30px;
-}
-
-.allow_text {
-	color: gray;
-	display: block;
-	font-size: 20px;
-}
-
-.box_allow div {
+.confirm_allow div {
 	position: absolute;
 	top: 250px;
 	left: 95px;
 }
-
-.box_send {
+.allow_icon {
+	float: left;
+	height: 50px;
+	width: 50px;
+	margin-left: 30px;
+	margin-top: 30px;
+	border: 1px solid #24BA9F;
+	border-radius: 2px;
+}
+.allow_text {
+	display: block;
+	float: left;
+	color: gray;
+	font-size: 20px;
+}
+.confirm_send {
+	text-align: center;
 	background-color: #24BA9F;
 	color: white;
-	font-size: 40px;
-	padding: 20px 70px;
 	width: 200px;
 	margin-left: -64px;
 	margin-top: 60px;
 	border-radius: 10px;
-	text-align: center;
+	font-size: 40px;
+	padding: 20px 70px;
 }
-
+.footer_infos {
+	position: absolute;
+	display: block;
+	width: 1150px;
+	height: 50px;
+	left: 60px;
+	top: 600px;
+}
 .footer_rights {
-	color: gray;
 	float: left;
-}
-
-.footer_main_logo {
 	color: gray;
-	float: right;
-	font-size: 18px;
-	padding: 12px;
-	position: relative;
 }
-
+.footer_main_logo {
+	position: relative;
+	float: right;
+	color: gray;
+	padding: 12px;
+	font-size: 18px;
+}
+.logo_bold {
+	font-weight: bold;
+}
 .footer_logos {
 	float: right;
 	margin-right: 25px;
-}
-
-.logo_bold {
-	font-weight: bold;
 }
