--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ header {
     width: 140px;
 	top: 40px;
 	left: -10px;
+	z-index: 2;
 }
 .vertical_list ul li {
 	float: none;
@@ -107,9 +108,11 @@ SECTION1
 
 .box {
 	height: 500px;
+	z-index: 0;
+	position: relative;
 }
 .slide_box {
-	position: relative;
+
 	height: 500px;
 	rgba(246,41,12,1)), color-stop(0%, rgba(240,47,23,1)), color-stop(0%, rgba(250,250,250,1)), color-stop(100%, rgba(209,208,214,1)));
 	background: -webkit-linear-gradient(top, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(250,250,250,1) 0%, rgba(209,208,214,1) 100%);
@@ -121,8 +124,10 @@ SECTION1
 	position: absolute;
 	width: auto;
 	height: 400px;
-	bottom: 30px;
-	left: 100px;
+	margin-top: 50px;
+	margin-bottom: 30px;
+	margin-left: 100px;
+	z-index: 2;
 }
 h2 {
 	font-weight: bold;
@@ -130,6 +135,7 @@ h2 {
 	right: 250px;
 	top: 130px;
 	font-size: 50px;
+	z-index: 2;
 }
 .info_box {
 	text-align: center;
@@ -138,6 +144,7 @@ h2 {
 	height: 80px;
 	right: 280px;
 	top: 210px;
+	z-index: 2;
 }
 .more_box {
 	text-align: center;
@@ -150,20 +157,32 @@ h2 {
 	font-size: 25px;
 	padding: 15px;
 	border-radius: 15px;
+	z-index: 2;
 }
 .left_slyder_button {
 	position: absolute;
 	color: #24BA9F;
-	left: 100px;
-	top: 200px;
+	margin-left: 100px;
+	margin-top: 200px;
 	font-size: 100px;
+	z-index: 2;
 }
 .right_slyder_button {
 	position: absolute;
 	color: #24BA9F;
-	right: 100px;
-	top: 200px;
+	margin-left: 1200px;
+	margin-top: 200px;
 	font-size: 100px;
+	z-index: 2;
+}
+.slider {
+	height: 500px;
+	width: 100%;
+	position: absolute;
+	visibility: hidden;
+}
+.visibility {
+	visibility: visible;
 }
 
 /*
